--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,21 @@
-:root {
-    --primary-color: #E83A14;
-    --secundary-color: #EED971FF;
-    --light-color: #f3f3f3;
-    --dark-color: #333;
-    --max-width: 1350px;
-}
-
-.category {
-    --sports-color: #f99500;
-    --ent-color: #a66bbe;
-    --tech-color: #009cff;
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-    font-family: 'Lato', sans-serif;
-    line-height: 1.5;
-    background: var(--light-color);
+    font-family: 'Open Sans', sans-serif;
+    background: #fff;
+    color: #333;
+    line-height: 1.6;
+}
+
+
+ul {
+    list-style: none;
 }
 
 a {
@@ -29,70 +23,94 @@ a {
     text-decoration: none;
 }
 
-ul {
-    list-style: none;
+h1,
+h2 {
+    font-weight: 300;
+    line-height: 1.2;
+}
+
+p {
+    margin: 10px 0;
 }
 
 img {
     width: 100%;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: 'Staatliches', cursive;
-    margin-bottom: .55rem;
-    line-height: 1.3;
-}
-
-/* Utility */
-.container {
-    max-width: var(--max-width);
-    margin: auto;
-    padding: 0 2rem;
-    overflow: hidden;
-}
-
-/* Navigation */
-#main-nav {
-    /* background: #FCEDDA; */
-    background-image: linear-gradient(#6883BC, #fff);
-    position: sticky;
-    top: 0;
-    z-index: 2;
-}
-
-#main-nav .container {
-    display: grid;
-    grid-template-columns: 06fr 6fr 2fr;
-    padding: 1rem;
+/* Navbar */
+.navbar {
+    display: flex;
     align-items: center;
+    justify-content: space-between;
+    background-color: #333;
+    color: #fff;
+    opacity: 0.8;
+    width: 100%;
+    height: 80px;
+    position: fixed;
+    top: 0px;
+    padding: 0 30px;
 }
 
-#main-nav .logo {
-    width: 180px;
-    opacity: 0.9;
+.navbar a {
+    color: #fff;
+    padding: 10px 20px;
+    margin: 0 5px;
 }
 
-#main-nav ul {
-    justify-self: end;
+.navbar a:hover {
+    border-bottom: #FF5B00 2px solid;
+}
+
+.navbar ul {
     display: flex;
 }
 
-#main-nav ul li a {
-    padding: 0.75rem;
-    font-weight: bold;
+.navbar .logo {
+    font-weight: 900;
 }
 
-#main-nav ul li a.current {
-    background: var(--primary-color);
-    color: #fff;
+/* .navbar .logo-icon [] */
+
+/* Header */
+.hero {
+    background: url('../images/home/showcase.jpeg') no-repeat center center/cover;
+    height: 100vh;
+    position: relative;
+    color: white;
 }
 
-#main-nav ul li a:hover {
-    background: var(--light-color);
-    color: var(--dark-color);
+.hero .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100vh;
+    padding-top: 40%;
+
+}
+
+.hero .content h1 {
+    font-size: 80px;
+}
+
+.hero .content p {
+    font-size: 23px;
+    max-width: 600px;
+    margin: 10px 0 20px;
+}
+
+.hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.hero * {
+    z-index: 10;
 }
